# BatchExchange

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  CONTRIBUTERS.yml  LICENSE  LICENSE-TRD-PARTY.md  Makefile  README.md  cmakeHelper.sh  dependencies.txt  repoInit.sh
certs/: dh2048.pem  server.csr
cmake/: compilerSettings.cmake  findPackages.cmake  version.cmake
conf/: nginx.conf
conf/slurmrestd.service.d/: override.conf
container/: build_slurm_el8.dockerfile  slurm_el8_rpm.sh
container/slurm/: slurm_el8_rpm.sh
container/trex_server/: Dockerfile  install.sh  trex_server.service
data/: creds  server.crt  server.key
doc/: Doxyfile
src/: BatchExchange.py  CBatch.cpp  CBatch.hpp  CBatchSlurm.cpp  CBatchSlurm.h  CBatchSlurm.hpp  CMakeLists.txt  main.cpp  restClient.cpp  sessionTokenTypes.h  slurm.cpp  trexcli.py  utils.cpp  utils.h  webserver.cpp  webserver.h  xcat.cpp  xcat.h
src/batchExchange/: CBatch.cpp  CBatch.h  CBatchSlurm.cpp  CBatchSlurm.h  CMakeLists.txt  CXCat.cpp  CXCat.h  curlHelper.h  httpSession.cpp  main.cpp  restClient.cpp  restClient.h  sessionTokenTypes.h  slurm.h  utils.cpp  utils.h
src/cli/: CMakeLists.txt  main.cpp
src/proxy/: CMakeLists.txt  asyncapi.json  asyncapi_json.cpp.in  asyncapi_json.h  batchsystem_json.h  batchsystem_process.cpp  batchsystem_process.h  build_data.cpp.in  build_data.h  cmd_run.cpp  cmd_run.h  cmd_user.cpp  cmd_user.h  credentials.cpp  credentials.h  creds.cpp  creds.h  error.cpp  error.h  error_wrapper.h  globals.cpp  globals.h  handler.cpp  handler.h  json.h  main.cpp  openapi.json  openapi_json.cpp.in  openapi_json.h  poll.h  poll_timer.h  response.h  salt_hash.h  server.h  server_wrap.cpp  server_wrap.h  set_echo.h  uri.cpp  uri.h  validation.h  (+3 more)
src/shared/: CBatch.h  CMakeLists.txt  base64.h  batch_json.h  http.cpp  http.h  joinString.h  obfuscator.h  randomHex.h  restClient.cpp  salt_hash.h  sha512.cpp  sha512.h  splitString.h  stream_cast.h  string_view.h  utils.cpp
src/unused/: CBatchSlurm.cpp  httpSession.h  main.cpp  restClient.cpp  restClient.h
src/xcat/: CXCat.h
test/: CMakeLists.txt  e2e.py  test.cpp
webserver/: install.sh  requirements.txt  setup.py  start_trex_server.sh  trex_server.service
webserver/batch_rest_server/: __init__.py  config.py
webserver/batch_rest_server/api/: openapi.yml
webserver/batch_rest_server/api/slurm/nodes/: __init__.py
webserver/batch_rest_server/helper/envparser/: __init__.py  combinators.py  core.py  parsers.py
webserver/batch_rest_server/templates/: index.html
websocket_client/: client.py
xcat/: README
xcat/aiida/: alma8-aiida.synclist  compute.almalinux85.aiida.pkglist  createAiidaImage  custom-aiida-scripts
xcat/slurm/: alma8-hpc.synclist  compute.almalinux85.slurm.pkglist   createXcatSlurmImage  custom-slurm-scripts
xcat/slurm/compile/: slurm_el8_rpm.sh
xcat_vagrant/: Vagrantfile  munge.key  sshconf
